<resources>
    <string name="app_name">Bubble</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="pause_play">Pause/Play</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac ante non nisl imperdiet venenatis nec at nisl. Cras in volutpat est. Donec non malesuada nibh, quis feugiat elit. Duis elit ante, gravida a nisi a, aliquam dapibus odio. Nulla facilisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque dapibus, sapien vitae auctor lacinia, est nulla consequat purus, sit amet placerat risus lorem sed diam. Cras gravida consequat cursus. Aliquam placerat libero quis risus cursus, et commodo libero feugiat.  </string>
    <string name="choose_album_art">Choose Album Art</string>
    <string name="choose_snippet">Choose Song Snippet</string>
    <string name="uploading">Uploading</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_successful">Upload Successful</string>
    <string name="choose_artist_art">Choose Artist Art</string>
    <string name="artist_blurb_hint">Artist Blurb \n \n \n \n \n </string>
    <string name="song_blurb_hint">Song Blurb \n \n \n \n \n</string>
    <string name="upload_artist">Upload Artist</string>
    <string name="upload_snippet">Upload Snippet</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="clear_likes">Clear Likes</string>
    <string name="refresh_cards">Refresh Cards</string>

    <string name="go_back">Go Back</string>
    <string name="artist_pic">TODO</string>
    <string name="textview">TextView</string>
    <string name="backbutton">BackButton</string>
    <string name="users_name_txt">Users_name_txt</string>
    <string name="liked">liked</string>
    <string name="todo">TODO</string>
    <string name="bubble">Bubble</string>
</resources>
