<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_settings_button"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_upload_button"
        android:title="@string/upload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout_button"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>