<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongDetailsFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/details_album_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/details_song_title"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="420dp"
        android:text="@string/song_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_album_art" />

    <TextView
        android:id="@+id/details_artist_name"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="460dp"
        android:text="@string/artist_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_album_art" />

    <TextView
        android:id="@+id/details_blurb"
        app:layout_constraintStart_toStartOf="@+id/details_album_art"
        app:layout_constraintTop_toBottomOf="@+id/details_album_art"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="500dp"
        android:text="@string/blurb"
        android:textSize="22sp" />

</android.support.constraint.ConstraintLayout>